@@ -1,3 +1,13 @@
+2015-08-13  Richard Larsson <ric.larsson@gmail.com>
+
+	* arts-2-3-272
+	
+	* src/lineshapes.cc:  Added mirrored Lorentzian line shape.  Useful
+	when you only want a single line or species that is mirrored and not
+	all lines are to be mirrored.  (E.g., NH3 in Jupiter atmosphere).
+	
+	* src/m_radiation_field.cc:  Fixed logic bugs reported by Oliver.
+
 2015-08-12  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-271
